chore: adding config of environment variables

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,6 +21,7 @@
     "@typescript-eslint/no-empty-function": "off",
     "no-useless-constructor": "off",
     "class-methods-use-this": "off",
-    "camelcase": "off"
+    "camelcase": "off",
+    "@typescript-eslint/no-var-requires": "off"
   }
 }
