--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,10 @@ testem.log
 Thumbs.db
 
 package-lock.json
+
+# dotenv environment variable files
+.env
+.env.development.local
+.env.test.local
+.env.production.local
+.env.local
