--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "npm run config && npm run lint && ng serve --port $PORT",
-    "build": "ng build",
+    "build": "npm run config && npm run lint && ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "lint": "eslint --ext ts --fix src/**/*.ts",
